# stellar-horizon-rs

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  codecov.yml
.github/workflows/: ci.yml  coverage.yml
src/: client.rs  error.rs  headers.rs  horizon_error.rs  lib.rs  link.rs  page.rs  request.rs
src/api/: accounts.rs  aggregations.rs  assets.rs  claimable_balances.rs  data.rs  effects.rs  ledgers.rs  liquidity_pools.rs  mod.rs  offers.rs  operations.rs  payments.rs  root.rs  trades.rs  transactions.rs
src/resources/: account.rs  asset.rs  book.rs  claimable_balance.rs  effect.rs  ledger.rs  liquidity_pool.rs  mod.rs  offer.rs  operation.rs  root.rs  trade.rs  transaction.rs
tests/: client_test.rs  page_test.rs  resources_test.rs
tests/fixtures/: account.json  account_data.json  account_with_sponsor.json  all_claimable_balances.json  all_effects.json  all_ledgers.json  all_liquidity_pools.json  all_offers.json  all_offers_with_sponsor.json  all_operations.json  all_payments.json  all_trade_aggregations.json  all_trades.json  all_transactions.json  assets.json  book_summary.json  claimable_balance.json  error_bad_request.json  error_invalid_accounts_params.json  error_transaction_malformed.json  fee_stats.json  ledger.json  liquidity_pool.json  paths_strict_receive.json  paths_strict_send.json  root.json
