[package]
name = "stellar-horizon"
version = "0.6.0"
authors = ["Francesco Ceccon <francesco@ceccon.me>"]
edition = "2018"
description = "Stellar Horizon client"
license = "Apache-2.0"
documentation = "https://docs.rs/stellar-horizon"
repository = "https://github.com/aurora-rs/stellar-horizon-rs"
readme = "README.md"
keywords = ["stellar", "blockchain"]

[dependencies]
stellar-base = "0.5.0"
async-sse = "5.0.0"
base64 = "0.12.3"
chrono = { version = "0.4.13", features = ["serde"] }
futures = "0.3.12"
hyper = { version = "0.14.2", features = ["client", "http1", "stream"] }
hyper-tls = "0.5.0"
http = "0.2.3"
http-types = "2.9.0"
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.56"
serde_with = { version = "1.6.0", features = ["default"] }
thiserror = "1.0.20"
url = "2.2.0"

[dev-dependencies]
tokio = { version = "1.0.2", features = ["full"] }
tokio-stream = "0.1.2"
json = "0.12.4"
hex = "0.4.2"