[package]
name = "stellar-horizon"
version = "0.7.2"
authors = ["Francesco Ceccon <francesco@ceccon.me>"]
edition = "2021"
description = "Stellar Horizon client"
license = "Apache-2.0"
documentation = "https://docs.rs/stellar-horizon"
repository = "https://github.com/aurora-rs/stellar-horizon-rs"
readme = "README.md"
keywords = ["stellar", "blockchain"]
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]

[dependencies]
stellar-base = { version = "0.6.0", default-features = false }
async-sse = "5.1.0"
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.21"
hyper = { version = "0.14.18", features = ["client", "http1", "stream"] }
hyper-tls = "0.5.0"
hyper-timeout = "0.4"
http = "0.2.6"
http-types = "2.12.0"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
serde_with = "3.4"
thiserror = "1.0.30"
url = "2.2.2"

[dev-dependencies]
stellar-base = { version = "0.6.0", features = ["sodium_oxide"] }
tokio = { version = "1.17.0", features = ["full"] }
tokio-stream = "0.1.8"
json = "0.12.4"
hex = "0.4.3"
